--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,5 +15,31 @@
   <%= @user.email %>
 </p>
 
+<table>
+  <thead>
+    <tr>
+      <th>User Email</th>    
+      <th>Time in</th>
+      <th>Time out</th>
+      <th>Total Time</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @time_cards.each do |time_card| %>
+      <tr>
+        <td><%= time_card.user.email %></td>
+        <td><%= time_card.time_in %></td>
+        <td><%= time_card.time_out %></td>
+        <td><%= time_card.total_time %></td>
+        <td><%= link_to 'Show', time_card %></td>
+        <td><%= link_to 'Edit', edit_time_card_path(time_card) %></td>
+        <td><%= link_to 'Destroy', time_card, method: :delete %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
