--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,56 +1,50 @@
-<header>
-  <% if current_user %>
-    Logged in as <%= current_user.email %>.
-    <%= link_to :log_out, logout_path %>
-  <% else %>
-    <%= link_to :sign_up, signup_path %> or 
-    <%= link_to :log_in, login_path %>
-  <% end %>
-  <p id=”notice”><%= notice %></p>
-</header>
 
-<body>
-  <% if current_user %>
-    <%= form_for(@time_card) do |f|%>
-      <% if @time_card.time_in.nil?%>
-        <%= f.hidden_field :time_in, :value => Time.now %>
-        <%= f.submit "Clock In" %>
-      <% else %>
-        <%= f.hidden_field :time_out, :value => Time.now %>
-        <%= f.submit "Clock Out" %>
-      <% end %>
+<% if current_user %>
+  <%= form_for(@time_card) do |f|%>
+    <% if @time_card.time_in.nil?%>
+      <%= f.hidden_field :time_in, :value => Time.now %>
+      <%= f.submit "Clock In", class:"main-button" %>
+    <% else %>
+      <%= f.hidden_field :time_out, :value => Time.now %>
+      <%= f.submit "Clock Out", class:"main-button" %>
     <% end %>
-  
-    <table>
-      <thead>
-        <tr>
-          <th>User Email</th>    
-          <th>Time in</th>
-          <th>Time out</th>
-          <th>Total Time</th>
-          <th colspan="3"></th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @time_cards.each do |time_card| %>
-          <tr>
-            <td><%= time_card.user.email %></td>
-            <td><%= time_card.time_in %></td>
-            <td><%= time_card.time_out %></td>
-            <td><%= time_card.total_time %></td>
-            <td><%= link_to 'Show', time_card %></td>
-            <td><%= link_to 'Edit', edit_time_card_path(time_card) %></td>
-            <td><%= link_to 'Destroy', time_card, method: :delete %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-
   <% end %>
+
+  <table class="table">
+    <thead>
+      <tr>
+        <th>User Email</th>    
+        <th>Time in</th>
+        <th>Time out</th>
+        <th>Total Time</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @time_cards.each do |time_card| %>
+        <tr>
+          <td><%= time_card.user.email %></td>
+          <td><%= time_card.time_in %></td>
+          <td><%= time_card.time_out %></td>
+          <td><%= time_card.total_time %></td>
+          <td><%= link_to 'Show', time_card %></td>
+          <td><%= link_to 'Edit', edit_time_card_path(time_card) %></td>
+          <td><%= link_to 'Destroy', time_card, method: :delete %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
   
   <div>
     <%= link_to :users, users_path %>
     <%= link_to :time_cards, time_cards_path %>
   </div>
-</body>
+<%else%>
+  <div class='login-portal'>
+    <%= link_to 'Sign up', signup_path, class: 'button' %> 
+    <%= link_to 'Log in', login_path, class: 'button' %> 
+  </div>
+<% end %>
+
+
