--- a/app/views/time_cards/index.html.erb
+++ b/app/views/time_cards/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>time_cards</h1>
+<h1>Time Cards</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>User Email</th>    
@@ -30,5 +30,5 @@
 
 <br>
 
-<%= link_to 'New time_card', new_time_card_path %>
+<%= link_to 'New time card', new_time_card_path %>
 <%= link_to :home, '/' %>
