--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,24 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   </head>
 
+    <nav class="navbar">
+      <div class="logo">
+        <h1>HiMama Clock In Clock Out</h1>
+      </div>
+
+      <div class="login">
+        <% if current_user %>
+          Logged in as <%= current_user.email %>.
+          <%= link_to 'log out', logout_path, class: 'button' %>
+        <% end %>
+      </div>
+    </nav>
+
+  <div class="notice">
+    <p id=”notice”><%= notice %></p>
+  </div>
+
+
   <body>
     <%= yield %>
   </body>
