--- a/app/views/time_cards/_form.html.erb
+++ b/app/views/time_cards/_form.html.erb
@@ -13,12 +13,12 @@
 
   <div class="field">
     <%= form.label :time_in %>
-    <%= form.text_field :time_in %>
+    <%= form.datetime_field :time_in %>
   </div>
 
   <div class="field">
     <%= form.label :time_in %>
-    <%= form.text_field :time_in %>
+    <%= form.datetime_field :time_out %>
   </div>
 
   <div class="actions">
