--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,8 @@
 <h1>New User</h1>
 
-<%= render 'form', user: @user %>
+<div class="login-portal">
+  <%= render 'form', user: @user %>
+</div>
 
-<%= link_to 'Back', users_path %>
+
+<%= link_to 'Home', '/' %>
