--- a/app/views/time_cards/index.html.erb
+++ b/app/views/time_cards/index.html.erb
@@ -8,7 +8,7 @@
       <th>User Email</th>    
       <th>Time in</th>
       <th>Time out</th>
-      <th>Total Time</th>
+      <th>Total Time in seconds</th>
       <th colspan="3"></th>
     </tr>
   </thead>
