--- a/app/views/time_cards/_form.html.erb
+++ b/app/views/time_cards/_form.html.erb
@@ -12,12 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :time_in %>
+    <%= form.label 'Time In ' %>
     <%= form.datetime_field :time_in %>
   </div>
 
   <div class="field">
-    <%= form.label :time_in %>
+    <%= form.label 'Time Out' %>
     <%= form.datetime_field :time_out %>
   </div>
 
