--- a/app/views/time_cards/new.html.erb
+++ b/app/views/time_cards/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', time_card: @time_card %>
 
-<%= link_to 'Back', time_cards_path %>
+<%= link_to 'Back', time_cards_path, class: 'button' %>
