--- a/app/views/time_cards/edit.html.erb
+++ b/app/views/time_cards/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', time_card: @time_card %>
 
-<%= link_to 'Show', @time_card %> |
-<%= link_to 'Back', time_cards_path %>
+<%= link_to 'Show', @time_card, class: 'button' %> 
+<%= link_to 'Home', '/', class: 'button' %>
