--- a/app/views/time_cards/show.html.erb
+++ b/app/views/time_cards/show.html.erb
@@ -10,5 +10,5 @@
   <%= @time_card.time_out %>
 </p>
 
-<%= link_to 'Edit', edit_time_card_path(@time_card) %> |
-<%= link_to 'Back', time_cards_path %>
+<%= link_to 'Edit', edit_time_card_path(@time_card), class: 'button'%> |
+<%= link_to 'Home', '/', class: 'button' %>
