--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,6 +11,7 @@
     </div>
   <% end %>
 
+<div class="login-portal">
   <div class="field">
     <%= form.label :first_name %>
     <%= form.text_field :first_name %>
@@ -39,4 +40,5 @@
   <div class="actions">
     <%= form.submit %>
   </div>
+</div>
 <% end %>
