--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -28,5 +28,5 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
-<%= link_to :home, '/' %>
+<%= link_to 'New User', new_user_path, class: 'button' %>
+<%= link_to :Home, '/', class: 'button' %>
