--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,8 @@
 <h1>New User</h1>
 
-<div class="login-portal">
-  <%= render 'form', user: @user %>
-</div>
+
+<%= render 'form', user: @user %>
 
 
-<%= link_to 'Home', '/' %>
+<%= link_to 'Home', '/', class: 'button' %>
+<%= link_to 'Users', users_path, class: 'button' %>
