--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -41,5 +41,6 @@
   </tbody>
 </table>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Edit', edit_user_path(@user), class: 'button' %> 
+<%= link_to 'Home', '/', class: 'button' %>
+<%= link_to 'Users', users_path, class: 'button' %>
