--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,8 @@
       <div class="login">
         <% if current_user %>
           Logged in as <%= current_user.email %>.
-          <%= link_to 'log out', logout_path, class: 'button' %>
+          <%= link_to 'Edit Profile', edit_user_path(current_user), class: 'button' %>
+          <%= link_to 'Log Out', logout_path, class: 'button' %>
         <% end %>
       </div>
     </nav>
