--- a/app/views/time_cards/show.html.erb
+++ b/app/views/time_cards/show.html.erb
@@ -10,5 +10,10 @@
   <%= @time_card.time_out %>
 </p>
 
+<p>
+  <strong>Total Time (Hours):</strong>
+  <%= @time_card.time_in_hours %>
+</p>
+
 <%= link_to 'Edit', edit_time_card_path(@time_card), class: 'button'%> |
 <%= link_to 'Home', '/', class: 'button' %>
