--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -41,6 +41,7 @@ body, p, ol, ul, td {
   text-align: center;
   display: inline-block;
   border-radius: 10px;
+  margin-top: 25px;
   margin-bottom: 25px;  
 }
 
@@ -53,6 +54,7 @@ body, p, ol, ul, td {
   text-align: center;
   display: inline-block;
   border-radius: 15px;
+  margin-top: 25px;
   margin-bottom: 25px;
 }
 
