--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -29,5 +29,5 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path, class: 'button' %>
+<%= link_to 'Sign Up', signup_path, class: 'button' %>
 <%= link_to :Home, '/', class: 'button' %>
