--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,6 +15,10 @@
   <%= @user.email %>
 </p>
 
+  <div class='total-hours'>
+    <h2> This user has clocked <%=number_with_precision(@total_clocked_hours, precision: 2)%> Hours</h2> 
+  </div>
+
 <% unless @time_cards.size.zero? %>
   <table class="table">
     <thead>
